packages/java/src/main/resources/natives/macos-arm64/include/ts_pack.h

/* Opaque type forward declarations */
typedef struct TSLanguage TSLanguage;
/**
 * A tree-sitter parser configured for one language at a time.
 * \code
 * use tree_sitter_language_pack::Parser;
 *
 * let mut parser = Parser::new();
 * parser.set_language("python")?;
 * let tree = parser.parse("def hello(): pass").expect("parse failed");
 * assert_eq!(tree.root_node().kind(), "module");
 * # Ok::<(), tree_sitter_language_pack::Error>(())
 * \endcode
 */
typedef struct TS_PACKParser TS_PACKParser;
/**
 * Detect language name from a file extension (without leading dot).
 *
 * Returns `None` for unrecognized extensions. The match is case-insensitive.
 *
 * ```
 * use tree_sitter_language_pack::detect_language_from_extension;
 * assert_eq!(detect_language_from_extension("py"), Some("python"));
 * assert_eq!(detect_language_from_extension("RS"), Some("rust"));
 * assert_eq!(detect_language_from_extension("xyz"), None);
 * ```
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
char *ts_pack_detect_language_from_extension(const char *ext);
/**
 * Detect language name from a file path.
 *
 * Extracts the file extension and looks it up. Returns `None` if the
 * path has no extension or the extension is not recognized.
 *
 * ```
 * use tree_sitter_language_pack::detect_language_from_path;
 * assert_eq!(detect_language_from_path("src/main.rs"), Some("rust"));
 * assert_eq!(detect_language_from_path("README.md"), Some("markdown"));
 * assert_eq!(detect_language_from_path("Makefile"), None);
 * ```
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
char *ts_pack_detect_language_from_path(const char *path);
/**
 * Detect language name from file content using the shebang line (`#!`).
 *
 * Inspects only the first line of `content`. If it begins with `#!`, the
 * interpreter name is extracted and mapped to a language name.
 *
 * Handles common patterns:
 * - `#!/usr/bin/env python3` â `"python"`
 * - `#!/bin/bash` â `"bash"`
 * - `#!/usr/bin/env node` â `"javascript"`
 *
 * The `-S` flag accepted by some `env` implementations is skipped automatically.
 * Version suffixes (e.g. `python3.11`, `ruby3.2`) are stripped before matching.
 *
 * Returns `None` when content does not start with `#!`, the shebang is
 * malformed, or the interpreter is not recognised.
 *
 * ```
 * use tree_sitter_language_pack::detect_language_from_content;
 * assert_eq!(detect_language_from_content("#!/usr/bin/env python3\npass"), Some("python"));
 * assert_eq!(detect_language_from_content("#!/bin/bash\necho hi"), Some("bash"));
 * assert_eq!(detect_language_from_content("no shebang here"), None);
 * ```
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
char *ts_pack_detect_language_from_content(const char *content);
/**
 * Get the highlights query for a language, if bundled.
 *
 * Returns the contents of `highlights.scm` as a static string, or `None`
 * if no highlights query is bundled for this language.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::get_highlights_query;
 *
 * // Returns Some(...) for languages with bundled queries
 * let query = get_highlights_query("python");
 * // Returns None for languages without bundled highlights queries
 * let missing = get_highlights_query("nonexistent_lang");
 * assert!(missing.is_none());
 * \endcode
 */
char *ts_pack_get_highlights_query(const char *language);
/**
 * Get the injections query for a language, if bundled.
 *
 * Returns the contents of `injections.scm` as a static string, or `None`
 * if no injections query is bundled for this language.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::get_injections_query;
 *
 * let query = get_injections_query("markdown");
 * // Returns None for languages without bundled injections queries
 * let missing = get_injections_query("nonexistent_lang");
 * assert!(missing.is_none());
 * \endcode
 */
char *ts_pack_get_injections_query(const char *language);
/**
 * Get the locals query for a language, if bundled.
 *
 * Returns the contents of `locals.scm` as a static string, or `None`
 * if no locals query is bundled for this language.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::get_locals_query;
 *
 * let query = get_locals_query("python");
 * // Returns None for languages without bundled locals queries
 * let missing = get_locals_query("nonexistent_lang");
 * assert!(missing.is_none());
 * \endcode
 */
char *ts_pack_get_locals_query(const char *language);
/**
 * Get a tree-sitter `Language` by name using the global registry.
 *
 * Resolves language aliases (e.g., `"shell"` maps to `"bash"`).
 * When the `download` feature is enabled (default), automatically downloads
 * the parser from GitHub releases if not found locally.
 * \note Returns `Error.LanguageNotFound` if the language is not recognized,
 * or `Error.Download` if auto-download fails.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::{get_language, Parser};
 *
 * let _lang = get_language("python")?;
 * let mut parser = Parser::new();
 * parser.set_language("python")?;
 * let tree = parser.parse("x = 1").expect("parse failed");
 * assert_eq!(tree.root_node().kind(), "module");
 * # Ok::<(), tree_sitter_language_pack::Error>(())
 * \endcode
 */
const TSLanguage *ts_pack_get_language(const char *name);
/**
 * Get a `Parser` pre-configured for the given language.
 *
 * This is a convenience function that calls `get_language` and configures
 * a new parser in one step.
 * \note Returns `Error.LanguageNotFound` if the language is not recognized, or
 * `Error.ParserSetup` if the language cannot be applied to the parser.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::get_parser;
 *
 * let mut parser = get_parser("rust")?;
 * let tree = parser.parse("fn main() {}").expect("parse failed");
 * assert!(!tree.root_node().has_error());
 * # Ok::<(), tree_sitter_language_pack::Error>(())
 * \endcode
 */
TS_PACKParser *ts_pack_get_parser(const char *name);
/**
 * Detect language name from a file path or extension.
 *
 * This compatibility alias matches the pre-Alef Python binding API.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
char *ts_pack_detect_language(const char *path);
/**
 * List all available language names (sorted, deduplicated, includes aliases).
 *
 * Returns names of both statically compiled and dynamically loadable languages,
 * plus any configured aliases.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::available_languages;
 *
 * let langs = available_languages();
 * for name in &langs {
 *     println!("{}", name);
 * }
 * \endcode
 */
char *ts_pack_available_languages(void);
/**
 * Check if a language is available by name or alias.
 *
 * Returns `true` if the language can be loaded (statically compiled,
 * dynamically available, or a known alias for one of these).
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * use tree_sitter_language_pack::has_language;
 *
 * assert!(has_language("python"));
 * assert!(has_language("shell")); // alias for "bash"
 * assert!(!has_language("nonexistent_language"));
 * \endcode
 */
int32_t ts_pack_has_language(const char *name);